<resources>
    <string name="app_name">Help!</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="name2">Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="not_registered_yet_signup">Not Registered Yet?SignUp!</string>
    <string name="login">Login</string>
    <string name="email_input_message">Enter the e-mails of your emergency contacts</string>
    <string name="input_email5">Enter E-mail 5</string>
    <string name="input_email4">Enter E-mail 4</string>
    <string name="input_email3">Enter E-mail 3</string>
    <string name="input_email2">Enter E-mail 2</string>
    <string name="input_email1">Enter E-mail 1</string>
    <string name="already_registed_login">Already Registered?Login</string>
    <string name="proceed">Proceed</string>
    <string name="track_me">Track Me!</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign-Out</string>
    <string name="when_should_we_stop_tracking_you">When Should We Stop Tracking You?</string>
    <string name="type_in_time">Type in Time</string>
    <string name="colon">:</string>
    <string name="_12">12</string>
    <string name="_53">53</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="stop">Stop</string>
    <string name="help">HELP!</string>
    <string name="todo">TODO</string>
    <string name="hello">Hello</string>
</resources>
